<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:minWidth="400dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvPlayerArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/tvPlayerAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imgAlbumArt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="1"
        android:contentDescription="@string/content_desc_album_art"/>

    <TextView
        android:id="@+id/tvPlayerSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/sbrProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvDurationStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/duration_start"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sbrProgress"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvDurationEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/duration_end"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/sbrProgress"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/ibtnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous_black_48dp"
            android:contentDescription="@string/content_desc_previous_track"/>

        <ImageButton
            android:id="@+id/ibtnPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_48dp"
            android:contentDescription="@string/content_desc_play_pause"/>

        <ImageButton
            android:id="@+id/ibtnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next_black_48dp"
            android:contentDescription="@string/content_desc_next_track"/>

    </LinearLayout>


</LinearLayout>